5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1712_2496.log
== TEST (2019-05-08 14:29:19) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	soma= y+x
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:29:36) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	soma= y+x
	num= int(input("Numero:"))

print(soma)
-- EXECUTION TIME:
0.128868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:43) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	soma= y+x
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:18) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	soma= y+soma
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma= y+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:30:23) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	soma= y+soma
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma= y+soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:18) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:31:27) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	num= int(input("Numero:"))

print(soma)
-- EXECUTION TIME:
0.126908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:30) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	num= int(input("Numero:"))

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:31:39) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	num= int(input("Numero:"))

print(y)
-- EXECUTION TIME:
0.183772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:42) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	num= int(input("Numero:"))

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:32:16) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	x= int(input("Numero:"))

print(y)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:32:25) 
-- CODE:
x= int(input("Numero:"))
y= 0

while (x != -1):
	y= y+x
	x= int(input("Numero:"))

print(y)
-- EXECUTION TIME:
0.193652
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
